main/default/objects/Eligibility_Template__c/Eligibility_Template__c.object-meta.xml
<CustomObject>
    <label>Eligibility Template</label>
    <nameField>
        <label>Eligibility Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>