main/default/objects/Eligibility_Template__c/fields/Eligibility_Format__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Format__c</fullName>
    <label>Eligibility Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>