main/default/objects/Eligibility_Template__c/fields/Eligibility_Product__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Product__c</fullName>
    <label>Eligibility Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>