main/default/objects/Eligibility_Template__c/fields/Eligibility_Value__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Value__c</fullName>
    <label>Eligibility Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>