main/default/objects/Eligibility_Template__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>